# casaTrader

./: .dockerignore  .gitignore  .system_pids  ALTERNATIVES_SUPABASE.md  AMELIORATION_SCRAPING.md  AMELIORATION_SENTIMENT_MAROC.md  AUTOMATISATION.md  AUTOMATISATION_COMPLETE.md  BOUTON_ACTUALISER.md  CALCUL_DU_SCORE.md  COMMENT_DEMARRER.md  COMPARISON_APPROACHES.md  CONFIGURATION_LLM_COMPLETE.md  CONFIGURATION_SUPABASE_SYNC.md  CONNEXION_REUSSIE.md  CORRECTION_ERREUR_404.md  CORRECTION_SCRAPING_COMPLETE.md  DASHBOARD_COMPLET_INTEGRE.md  DASHBOARD_READY.md  DEMARRAGE_MAINTENANT.md  DEMARRAGE_RAPIDE.md  DEMARRAGE_UNIFIE.md  DEMARRER_ICI.sh  DOCKER_SSD_SETUP.md  EXPLICATION_MEDIA_SENTIMENT.md  EXPLICATION_MEDIA_SENTIMENT_NON_CHANGE.md  EXTRACTION_IMAGES_ARTICLES.md  FEAR_GREED_INTEGRATION.md  FIX_BOURSENEWS.md  FIX_SCORE_50.md  FORMULE_SIMPLIFIEE.md  GESTION_BACKEND_LLM.md  HEADER_SAAS_INTEGRE.md  INSTALL_DOCKER.md  INSTRUCTIONS_ACTUALISER.md  INTEGRATION_GUIDE.md  INTEGRATION_LLM_COMPLETE.md  INTEGRATION_LLM_SENTIMENT.md  INTEGRATION_NEWS_FEAR_GREED.md  INTEGRATION_SAAS.md  (+78 more)
backend/: .env.example  CACHE_ET_PERFORMANCE.md  Dockerfile  GUIDE_SOLUTION_RLS.md  MIGRATIONS.md  MONITORING.md  README.md  SECURITE.md  TESTER_LLM_SENTIMENT.md  add_content_column.py  add_image_url_column.py  analyze_boursenews.py  analyze_html_structure.py  analyze_media_structure.py  analyze_medias24.py  boursenews_links.txt  boursenews_response.html  debug_leconomiste.py  demo_pipeline.py  init_db.py  init_timescale.sql  lavieeco_home.html  medias24_economie.html  medias24_medias24.com.html  (+23 more)
(+296 files in other folders)
